[package]
authors = ["Nils Eriksson <nils.edvin.eriksson@gmail.com>"]
edition = "2018"
name = "quadigit_phat"
license-file = "LICENSE"
version = "0.0.0"
description = "High level driver for the Four Letter pHAT digital display"

[features]
default = ["std"] # As of writing this, only Error implements std::error::Error
std = []

[lib]
name = "quadigit_phat"
path = "src/lib.rs"

[[bin]]
name = "clock"
path = "src/bin/clock.rs"

[dependencies]
embedded-hal = "0.2"
ht16k33-lite    = { git = "https://github.com/nilscript/ht16k33-lite", rev = "85a0645" }
itertools       = "0.10.3"
phf             = { version = "0.10.0", features = ["macros"] }

# Binary clock dependencies
rppal = { version = "0.13.1", features = ["hal"] }  # Driver
chrono = "0.4.13"                                   # Replacement for std::time
docopt = "1"                                        # Arguments
serde = { version = "1", features = ["derive"] }
ctrlc = "3.1.7"
schedule_recv = "0.1.0"

[dev-dependencies]
embedded-hal-mock  = "0.8.0"
