[package]
authors = ["Nils Eriksson <nils.edvin.eriksson@gmail.com>"]
edition = "2021"
name = "quadigit_phat"
license-file = "LICENSE"
version = "0.0.0"
description = "High level driver for the Four Letter pHAT digital display"
readme="readme.md"

[features]
default = ["std"] # As of writing this, only Error implements std::error::Error
std = []

[lib]
name = "quadigit_phat"

[dependencies]
ambassador      = "0.3"
dyn-iter        = "0.2"
embedded-hal    = "0.2"
ht16k33-lite    = { git = "ssh://script.show:56486/~/git/ht16k33-lite.git", rev = "67257e10" }
itertools       = "0.10"
phf             = { version = "0.11", features = ["macros"] }

[dev-dependencies]
assert_hex          = "0.2"
